@@ -1,5 +1,11 @@
 Changes with Apache 2.0.30-dev
 
+  *) Fix a couple of mod_proxy problems forwarding HTTP connections:
+     (1) PR #9190  It failed to connect to IPv6 hosts.
+     (2) It failed to connect when the first IP address returned by 
+         the resolver was unreachable but a secondary IP address was.  
+     [Jeff Trawick]
+
   *) Fix the module identifer as shown in the docs for various core
      modules (e.g., the identifer for mod_log_config was previously
      listed as config_log_module).  PR #9338
